powo-portal/src/main/frontend/src/sass/pages/_home.scss
// Page Home
.s-page {
  position: relative;
}

.s-page--home,
.s-page--error {
  .c-search {
    border-color: #FFFFFF;
    background-image: url('/img/raster/Anagallis_arvensis_06.jpg');
    background-size: cover;
    background-position-x: 25%;
    background-position-y: 25%;
    min-height: 80vh;
    background-repeat: no-repeat;
    @media (max-width: $screen-sm-min) {
      min-height: 120vh;
    }
  }
  .s-page-wrapper {
    position: relative;
    min-height: calc(100vh - 30px);
  }

  .c-header__actions {
    margin-top: 25px;
  }

  #kew-logo-svg {
    width: 400px;
    height: 60px;
    fill: $kew-black;
  }

  .site-logo {
    fill: $kew-black;
  }
}

@media (min-width: $screen-sm-min) {
  .s-search__fullpage .c-footer,
  .s-page--error .c-footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
  }
}
.c-intro {
  small {
    display: block;
    margin-bottom: 3.5rem;
    margin-top: -1rem;
  }

  @media (max-width: $screen-sm-max) {
    .site-logo {
      width: 200px;
      height: 110px;
    }
  }
}
.c-header .container,
.c-footer .container {
  max-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  @media (min-width: $screen-sm-min) {
    padding-left: 100px;
    padding-right: 100px;
  }
}
.s-search__fullpage {
  .c-intro {
    display: block;
  }
  .front-page-container {
    display: flex;
    flex-direction: column;
    height: 80vh;
    padding: 0 16px;
    @media (min-width: $screen-sm-min) {
      padding: 0 100px;
    }
    .central {
      flex-direction: column;
      max-width: 865px;
      margin: auto;
      p {
        padding-bottom: 35px;
        margin: 0
      }
    }
    .featured {
      @media (min-width: $screen-sm-min) {
        display: block;
        color: $White;
        align-self: flex-end;
      }
      display: none;
      a {
        color: $White
      }
    };
  }

  .form-inline--search {
    @media (min-width: $screen-lg) { width: 740px; }
      margin: 0 auto;
  }

  .site-logo {
    width: 300px;
    height: 145px;
  }
}

.cookie-bar {
  background-color: #222;
  color: white;
  border-radius:0px;

  a {
    margin-left:10px;
    margin-right:10px;
    color: white;
    text-decoration: underline;
  }

}

// Section Home
.s-search-home {
  width: 100%;
  @media (min-width: $screen-sm-min) {
    position: absolute;
    top: 40%;
    left: 0;
    transform: translateY(-50%);
  }
}
.s-search__fullpage {
  .featured-taxa-sections {
    display: none;
    @media (min-width: $screen-sm-min) {
      display: block;
    }
  }
}

